Updated main activity with a toolbar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
-    <string name="app_name">CST2335 Final Project</string>
+    <string name="app_name"><b><u>CST2335 Final Project</u></b></string>
     <string name="appOne">Living Room</string>
     <string name="appTwo">Kitchen</string>
     <string name="appThree">House</string>
     <string name="appFour">Automobile</string>
+    <string name="appInfo">Use the buttons on the toolbar to switch between activities.\nFor help, use the help item from the drop down menu in the toolbar.</string>
 </resources>
