Added radio functionality Added CB radio functionality Added GPS functionality Fixed error where selecting new item crashes app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="appTwo">Kitchen</string>
     <string name="appThree">House</string>
     <string name="appFour">Automobile</string>
+    <string name="title_activity_toolbar">toolbar</string>
 </resources>
